# pyAMLL

./: .gitignore  README.md  lyrics.txt  pyproject.toml
.github/workflows/: pylint.yml
pyamll/: player.py  tui.py
pyamll/components/: carousel.py  elementedit.py  filepicker.py  sidebar.py
pyamll/parser/: __init__.py  modify.py  swlrc.py
pyamll/screens/: edit.py  settings.py  sync.py
pyamll/styles/: base.tcss  carousel.tcss  elementedit.tcss  filenamepicker.tcss
pyttml/: main.py  models.py  player.py  ttml.py  tui.py  utils.py
pyttml/assets/: styles.tcss
pyttml/components/: carousel.py  filepicker.py  playerbox.py  sidebar.py
pyttml/screens/: edit.py  sync.py
pyttml/styles/: base.tcss  carousel.tcss  playerbox.tcss  sidebar.tcss
tests/: test_ttml.py  test_utils.py
tests/samples/: lyrics_blinding_lights_the_weeknd.txt  lyrics_levitating_dua_lipa.txt  obj_blinding_lights_the_weeknd.py  obj_levitating_dua_lipa.py
