[tool.poetry]
name = "pyamll"
version = "0.1.0"
description = " Tool for creating syllable-synced lyrics for songs, within in your terminal! "
authors = ["Aditya Gupta <mail@adityagupta.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.4"
python-vlc = "^3.0.21203"
textual = "^1.0.0"
textual-dev = "^1.7.0"
mutagen = "^1.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
